// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextFieldPopover snapshots should render ButtonIconPopover 1`] = `
<DocumentFragment>
  <div
    class="css-zcp5dz"
    data-test-box=""
  >
    <div
      class="css-c6outs Popover"
      data-test-box=""
      data-test-popover="popover"
      style="left: 0px; top: 0px;"
    >
      children
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextFieldPopover snapshots should render with opened popover 1`] = `
<DocumentFragment>
  <div
    class="css-zcp5dz"
    data-test-box=""
  >
    <div
      class="css-c6outs Popover Popover--selected"
      data-test-box=""
      data-test-popover="popover"
      style="left: 0px; top: 0px;"
    >
      children
    </div>
  </div>
</DocumentFragment>
`;
